<resources>
    <string name="app_name">FilmFan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Film Fan</string>
    <string name="nav_header_subtitle">df@bk</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>

    <string name="menu_favorite">Favorites</string>
    <string name="menu_rated">Rated</string>

    <string name="title_activity_details">About movie</string>
    <string name="title_home">Details</string>
    <string name="title_actors">Actors</string>
    <string name="title_similar">Similar</string>
    <string name="title_recommendations">Recommendations</string>


    <string name="user_configurations">com.example.filmfan.USER_CONFIGURATIONS</string>
    <string name="tmdb_api_key">com.example.filmfan.TMDB_API_KEY</string>
    <string name="tmdb_session_id">com.example.filmfan.TMDB_SESSION_ID</string>
</resources>
