<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.filmfan.ListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_list" >
        <argument
            android:name="myArg"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.filmfan.ListFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_list" >
        <argument
            android:name="myArg"
            app:argType="integer"
            android:defaultValue="1" />
    </fragment>

    <fragment
        android:id="@+id/nav_rated"
        android:name="com.example.filmfan.ListFragment"
        android:label="@string/menu_rated"
        tools:layout="@layout/fragment_list" >
        <argument
            android:name="myArg"
            app:argType="integer"
            android:defaultValue="2" />
    </fragment>
</navigation>